<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="64dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipping"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBillTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_bill"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etBill"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_700"
        android:backgroundTint="@color/teal_700"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvBillTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollar"
        android:textSize="24sp"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/etBill"
        app:layout_constraintEnd_toStartOf="@id/etBill"
        app:layout_constraintBottom_toBottomOf="@id/etBill"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTipTile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_tip"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tvDollar"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTip"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_700"
        android:backgroundTint="@color/teal_700"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvTipTile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage"
        android:textSize="24sp"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/etTip"
        app:layout_constraintStart_toEndOf="@id/etTip"
        app:layout_constraintBottom_toBottomOf="@id/etTip"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSplitTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/split_with_your_friend"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tvPercentage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSplit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/split_default_value"
        android:textSize="24sp"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvSplitTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_left_arrow"
        android:background="@drawable/bg_button"
        android:layout_marginRight="12dp"
        app:layout_constraintEnd_toStartOf="@id/tvSplit"
        app:layout_constraintTop_toTopOf="@id/tvSplit"
        app:layout_constraintBottom_toBottomOf="@id/tvSplit"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_right_arrow"
        android:background="@drawable/bg_button"
        android:layout_marginLeft="12dp"
        app:layout_constraintStart_toEndOf="@id/tvSplit"
        app:layout_constraintTop_toTopOf="@id/tvSplit"
        app:layout_constraintBottom_toBottomOf="@id/tvSplit"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="32dp"
        android:background="@drawable/bg_card"
        app:layout_constraintTop_toBottomOf="@id/ivPlus">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDivideTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_per_person"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalPerPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="$12.000"
            android:text="@string/default_value"
            android:textSize="24sp"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDivideTitle"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalBillTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tvTotalBill"
            app:layout_constraintEnd_toEndOf="@id/tvTotalBill"
            app:layout_constraintTop_toBottomOf="@id/tvTotalPerPerson"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="$12.000"
            android:text="@string/default_value"
            android:textSize="24sp"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTotalBillTitle"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalTipTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/tvTotalTip"
            app:layout_constraintEnd_toEndOf="@id/tvTotalTip"
            app:layout_constraintTop_toBottomOf="@id/tvTotalPerPerson"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="$12.000"
            android:text="@string/default_value"
            android:textSize="24sp"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTotalBillTitle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>